# cart-shipping

./: README.md  env_example  pyproject.toml
app/: config.py  const.py  functions.py  main.py  schemas.py
app/routers/: shipping.py
tests/: test_functions.py  test_shipping.py
